--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1556,21 +1556,6 @@ body {
     }
 }
 
-
-@media screen and (max-width: 599px) {
-    .jzPkfJ {
-        display: grid;
-        order: 2;
-    }
-}
-
-@media screen and (max-width: 399px) {
-    .jzPkfJ {
-        display: grid;
-        order: 2;
-    }
-}
-
 @media screen and (max-width: 8192px) {
     .jzPkfJ {
         display: none;
@@ -1592,6 +1577,20 @@ body {
 @media screen and (max-width: 767px) {
     .jzPkfJ {
         display: none;
+    }
+}
+
+@media screen and (max-width: 599px) {
+    .jzPkfJ {
+        display: grid;
+        order: 2;
+    }
+}
+
+@media screen and (max-width: 399px) {
+    .jzPkfJ {
+        display: grid;
+        order: 2;
     }
 }
 
@@ -2409,4 +2408,60 @@ input:focus{
     border: 1px solid #62aa57;
     background-color: white;
     color: black;
+}
+
+.link-hover:hover{
+    background-color: rgb(230, 232, 234);
+}
+
+.nav-link{
+    font-size: 14px;
+}
+
+.active-link{
+    cursor: pointer;
+    background-color: rgb(230, 232, 234);
+}
+
+.active-link:hover::after{
+    content: "";
+    width: 0%;
+    height: 0;
+    background-color: transparent;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+}
+
+.active-link:after{
+    content: "";
+    width: 100%;
+    height: 4px;
+    background-color: rgb(0, 0, 0);
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+}
+
+.grid-nav-links{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 2rem;
+}
+
+ .kGKNqV {
+     font-weight: 400;
+     font-size: 14px;
+     line-height: 18px;
+     letter-spacing: 0px;
+     color: rgb(32, 34, 36);
+     margin-bottom: 4px;
+     display: block;
+ }
+
+@media screen and (max-width: 599px) {
+    .kGKNqV {
+        display: none;
+        margin-bottom: 0px;
+    }
 }
