--- a/resources/css/article.css
+++ b/resources/css/article.css
@@ -1,3 +1,198 @@
+:root{
+    --primary-green: #62aa57;
+}
+
+:root {
+    --ck-color-base-foreground: 								hsl(0, 0%, 98%);
+    --ck-color-base-background: 								hsl(0, 0%, 100%);
+    --ck-color-base-border: 									hsl(220, 6%, 81%);
+    --ck-color-base-action: 									hsl(104, 50.2%, 42.5%);
+    --ck-color-base-focus: 										hsl(209, 92%, 70%);
+    --ck-color-base-text: 										hsl(0, 0%, 20%);
+    --ck-color-base-active: 									hsl(218.1, 100%, 58%);
+    --ck-color-base-active-focus:								hsl(218.2, 100%, 52.5%);
+    --ck-color-base-error:										hsl(15, 100%, 43%);
+
+    /* -- Generic colors ------------------------------------------------------------------------ */
+
+    --ck-color-focus-border-coordinates: 						218, 81.8%, 56.9%;
+    --ck-color-focus-border: 									hsl(var(--ck-color-focus-border-coordinates));
+    --ck-color-focus-outer-shadow:								hsl(212.4, 89.3%, 89%);
+    --ck-color-focus-disabled-shadow:							hsla(209, 90%, 72%,.3);
+    --ck-color-focus-error-shadow:								hsla(9,100%,56%,.3);
+    --ck-color-text: 											var(--ck-color-base-text);
+    --ck-color-shadow-drop: 									hsla(0, 0%, 0%, 0.15);
+    --ck-color-shadow-drop-active:								hsla(0, 0%, 0%, 0.2);
+    --ck-color-shadow-inner: 									hsla(0, 0%, 0%, 0.1);
+
+    /* -- Buttons ------------------------------------------------------------------------------- */
+
+    --ck-color-button-default-background: 						transparent;
+    --ck-color-button-default-hover-background: 				hsl(0, 0%, 94.1%);
+    --ck-color-button-default-active-background: 				hsl(0, 0%, 94.1%);
+    --ck-color-button-default-disabled-background: 				transparent;
+
+    --ck-color-button-on-background: 							hsl(212, 100%, 97.1%);
+    --ck-color-button-on-hover-background: 						hsl(211.7, 100%, 92.9%);
+    --ck-color-button-on-active-background: 					hsl(211.7, 100%, 92.9%);
+    --ck-color-button-on-disabled-background: 					hsl(211, 15%, 95%);
+    --ck-color-button-on-color:									hsl(218.1, 100%, 58%);
+
+
+    --ck-color-button-action-background: 						var(--ck-color-base-action);
+    --ck-color-button-action-hover-background: 					hsl(104, 53.2%, 40.2%);
+    --ck-color-button-action-active-background: 				hsl(104, 53.2%, 40.2%);
+    --ck-color-button-action-disabled-background: 				hsl(104, 44%, 58%);
+    --ck-color-button-action-text: 								var(--ck-color-base-background);
+
+    --ck-color-button-save: 									hsl(120, 100%, 27%);
+    --ck-color-button-cancel: 									hsl(15, 100%, 43%);
+
+    --ck-color-switch-button-off-background:					hsl(0, 0%, 57.6%);
+    --ck-color-switch-button-off-hover-background:				hsl(0, 0%, 49%);
+    --ck-color-switch-button-on-background:						var(--ck-color-button-action-background);
+    --ck-color-switch-button-on-hover-background:				hsl(104, 53.2%, 40.2%);
+    --ck-color-switch-button-inner-background:					var(--ck-color-base-background);
+    --ck-color-switch-button-inner-shadow:						hsla(0, 0%, 0%, 0.1);
+
+    /* -- Dropdown ------------------------------------------------------------------------------ */
+
+    --ck-color-dropdown-panel-background: 						var(--ck-color-base-background);
+    --ck-color-dropdown-panel-border: 							var(--ck-color-base-border);
+
+    /* -- Dialog -------------------------------------------------------------------------------- */
+
+    --ck-color-dialog-background: 								var(--ck-custom-background);
+    --ck-color-dialog-form-header-border: 						var(--ck-custom-border);
+
+    /* -- Input --------------------------------------------------------------------------------- */
+
+    --ck-color-input-background: 								var(--ck-color-base-background);
+    --ck-color-input-border: 									var(--ck-color-base-border);
+    --ck-color-input-error-border:								var(--ck-color-base-error);
+    --ck-color-input-text: 										var(--ck-color-base-text);
+    --ck-color-input-disabled-background: 						hsl(0, 0%, 95%);
+    --ck-color-input-disabled-border: 							var(--ck-color-base-border);
+    --ck-color-input-disabled-text: 							hsl(0, 0%, 46%);
+
+    /* -- List ---------------------------------------------------------------------------------- */
+
+    --ck-color-list-background: 								var(--ck-color-base-background);
+    --ck-color-list-button-hover-background: 					var(--ck-color-button-default-hover-background);
+    --ck-color-list-button-on-background: 						var(--ck-color-button-on-color);
+    --ck-color-list-button-on-background-focus: 				var(--ck-color-button-on-color);
+    --ck-color-list-button-on-text:								var(--ck-color-base-background);
+
+    /* -- Panel --------------------------------------------------------------------------------- */
+
+    --ck-color-panel-background: 								var(--ck-color-base-background);
+    --ck-color-panel-border: 									var(--ck-color-base-border);
+
+    /* -- Toolbar ------------------------------------------------------------------------------- */
+
+    --ck-color-toolbar-background: 								var(--ck-color-base-background);
+    --ck-color-toolbar-border: 									var(--ck-color-base-border);
+
+    /* -- Tooltip ------------------------------------------------------------------------------- */
+
+    --ck-color-tooltip-background: 								var(--ck-color-base-text);
+    --ck-color-tooltip-text: 									var(--ck-color-base-background);
+
+    /* -- Engine -------------------------------------------------------------------------------- */
+
+    --ck-color-engine-placeholder-text: 						hsl(0, 0%, 44%);
+
+    /* -- Upload -------------------------------------------------------------------------------- */
+
+    --ck-color-upload-bar-background:		 					hsl(209, 92%, 70%);
+
+    /* -- Link -------------------------------------------------------------------------------- */
+
+    --ck-color-link-default:									hsl(240, 100%, 47%);
+    --ck-color-link-selected-background:						hsla(201, 100%, 56%, 0.1);
+    --ck-color-link-fake-selection:								hsla(201, 100%, 56%, 0.3);
+
+    /* -- Search result highlight ---------------------------------------------------------------- */
+
+    --ck-color-highlight-background:							hsl(60, 100%, 50%);
+
+    /* -- Generic colors ------------------------------------------------------------------------- */
+
+    --ck-color-light-red:										hsl(0, 100%, 90%);
+}
+/*
+ * Copyright (c) 2003-2024, CKSource Holding sp. z o.o. All rights reserved.
+ * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
+ */
+:root {
+    /**
+     * An opacity value of disabled UI item.
+     */
+    --ck-disabled-opacity: .5;
+}
+/*
+ * Copyright (c) 2003-2024, CKSource Holding sp. z o.o. All rights reserved.
+ * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
+ */
+:root {
+    /**
+     * The geometry of the of focused element's outer shadow.
+     */
+    --ck-focus-outer-shadow-geometry: 0 0 0 3px;
+
+    /**
+     * A visual style of focused element's outer shadow.
+     */
+    --ck-focus-outer-shadow: var(--ck-focus-outer-shadow-geometry) var(--ck-color-focus-outer-shadow);
+
+    /**
+     * A visual style of focused element's outer shadow (when disabled).
+     */
+    --ck-focus-disabled-outer-shadow: var(--ck-focus-outer-shadow-geometry) var(--ck-color-focus-disabled-shadow);
+
+    /**
+     * A visual style of focused element's outer shadow (when has errors).
+     */
+    --ck-focus-error-outer-shadow: var(--ck-focus-outer-shadow-geometry) var(--ck-color-focus-error-shadow);
+
+    /**
+     * A visual style of focused element's border or outline.
+     */
+    --ck-focus-ring: 1px solid var(--ck-color-focus-border);
+}
+
+:root {
+    --ck-image-style-spacing: 1.5em;
+    --ck-inline-image-style-spacing: calc(var(--ck-image-style-spacing) / 2);
+}
+
+/*
+ * Copyright (c) 2003-2024, CKSource Holding sp. z o.o. All rights reserved.
+ * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
+ */
+:root {
+    --ck-font-size-base: 13px;
+    --ck-line-height-base: 1.84615;
+    --ck-font-face: Helvetica, Arial, Tahoma, Verdana, Sans-Serif;
+
+    --ck-font-size-tiny: 0.7em;
+    --ck-font-size-small: 0.75em;
+    --ck-font-size-normal: 1em;
+    --ck-font-size-big: 1.4em;
+    --ck-font-size-large: 1.8em;
+}
+/*
+ * Copyright (c) 2003-2024, CKSource Holding sp. z o.o. All rights reserved.
+ * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
+ */
+:root {
+    /* This is super-important. This is **manually** adjusted so a button without an icon
+    is never smaller than a button with icon, additionally making sure that text-less buttons
+    are perfect squares. The value is also shared by other components which should stay "in-line"
+    with buttons. */
+    --ck-ui-component-min-height: 2.3em;
+}
+
 .eeiVGB {
     position: relative;
     box-sizing: border-box;
@@ -8,14 +203,54 @@
 }
 
 .bWszMR {
-    color: #62aa57;
+    color: var(--primary-green);
     font-weight: 500;
-    font-size: 38px;
-    line-height: 44px;
+    font-size: 44px;
+    line-height: 50px;
     text-transform: none;
     text-decoration: none;
     letter-spacing: -0.76px;
 }
+
+.article_h1{
+    font-size: 60px;
+    font-weight: 500;
+    line-height: 30px;
+    margin: 25px 0;
+}
+
+.article_h2{
+    font-size: 24px;
+    font-weight: 450;
+    line-height: 30px;
+    margin: 25px 0;
+    color: var(--primary-green);
+}
+
+.article_h3{
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 25px;
+    margin: 25px 0;
+}
+
+.article_h4{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25px;
+    margin: 15px 0;
+}
+
+.article_p{
+    color: rgb(32, 34, 36);
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    text-transform: none;
+    text-decoration: none;
+    letter-spacing: -0.36px;
+}
+
 
 @media screen and (max-width: 399px) {
     .bWszMR {
@@ -25,6 +260,13 @@
         text-transform: none;
         text-decoration: none;
         letter-spacing: -0.56px;
+    }
+
+    .article_h2{
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 30px;
+        margin: 30px 0;
     }
 }
 
@@ -1250,4 +1492,47 @@ body .tdi_96 .td_module_flex_7 .entry-thumb {
     .eMVRpx {
         margin: 0px auto;
     }
+}
+
+.image-style-align-center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.image-style-align-left {
+    float: left;
+    margin-right: var(--ck-image-style-spacing);
+}
+
+.image-style-align-right {
+    float: right;
+    margin-left: var(--ck-image-style-spacing);
+}
+
+/* Simulates margin collapsing with the preceding paragraph, which does not work for the floating elements. */
+
+p + .image.image-style-align-left,
+p + .image.image-style-align-right,
+p + .image.image-style-side {
+    margin-top: 0;
+}
+
+.image-inline.image-style-align-left,
+.image-inline.image-style-align-right {
+    margin-top: var(--ck-inline-image-style-spacing);
+    margin-bottom: var(--ck-inline-image-style-spacing);
+}
+
+.image-inline.image-style-align-left {
+    margin-right: var(--ck-inline-image-style-spacing);
+}
+
+.image-inline.image-style-align-right {
+    margin-left: var(--ck-inline-image-style-spacing);
+}
+
+.fYAfXe a{
+    color: var(--primary-green);
+    text-decoration: underline;
+    cursor: pointer;
 }
