--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Montserrat';
+    font-weight: 100 900;
+    font-style: normal;
+    font-display: swap;
+    src: url("../fonts/Montserrat-VariableFont_wght.ttf") format("truetype-variations");
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-weight: 100 900;
+    font-style: italic;
+    font-display: swap;
+    src: url("../fonts/Montserrat-Italic-VariableFont_wght.ttf") format("truetype-variations");
+}
+
 @layer base {
     :root {
         --background: 0 0% 100%;
