--- a/resources/css/article.css
+++ b/resources/css/article.css
@@ -1,3 +1,24 @@
+@font-face {
+    font-family: 'Montserrat' !important;;
+    font-weight: 100 900;
+    font-style: normal;
+    font-display: swap;
+    src: url("../fonts/Montserrat-VariableFont_wght.ttf") format("truetype-variations");
+}
+
+@font-face {
+    font-family: 'Montserrat' !important;
+    font-weight: 100 900;
+    font-style: italic;
+    font-display: swap;
+    src: url("../fonts/Montserrat-Italic-VariableFont_wght.ttf") format("truetype-variations");
+}
+
+body{
+    font-family: 'Montserrat', sans-serif !important;
+}
+
+
 :root{
     --primary-green: #62aa57;
 }
