--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,7 +19,7 @@
 }
 
 .font-original{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif !important;
 }
 
 @layer base {
