--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -375,6 +375,11 @@ body {
     text-transform: none;
     text-decoration: none;
     letter-spacing: -0.36px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    height: 45px;
 }
 
 .kYtujW {
