--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -388,6 +388,11 @@ body {
     font-size: 14px;
     line-height: 18px;
     letter-spacing: 0px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    height: 45px;
 }
 
 .iYglrs {
